LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/Campaign_Request__c.object-meta.xml
<CustomObject>
    <label>Campaign Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Campaign Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>