LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Assets__c.field-meta.xml
<CustomField>
    <fullName>Assets__c</fullName>
    <label>Assets</label>
    <type>Url</type>
</CustomField>