LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Date__c</fullName>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>