LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Assigned_to_Marcom_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Marcom_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Marcom Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>