LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Status</field>
            <operation>notEqual</operation>
            <value>Close</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Requests</relationshipLabel>
    <relationshipName>Campaign_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>