LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Campaign_Objective__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Objective__c</fullName>
    <label>Campaign Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>