LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/campaign_request_status__c.field-meta.xml
<CustomField>
    <fullName>campaign_request_status__c</fullName>
    <label>Campaign Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In-progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>