LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Campaign_Title__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Title__c</fullName>
    <label>Campaign Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>