LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <color>#FF0000</color>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <color>#FFFF66</color>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <color>#33CCFF</color>
                <label>Cold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>