LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Category_Colour_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Colour_Code__c</fullName>
    <formula>IMAGE( 
 

Case(    TEXT(Category__c) , 
 

&quot;Hot&quot;, &quot;/resource/ResourceCategory_Hot&quot;, 
 

&quot;Warm&quot;, &quot;/resource/ResourceCategoryWarm&quot;, 
 

&quot;Cold&quot;, &quot;/resource/ResourceCategoryCold&quot;,
&quot;/img/samples/CategoryHot.jpeg&quot;

),
TEXT(Category__c)
 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category Colour Code</label>
    <type>Text</type>
</CustomField>