LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Requests</relationshipLabel>
    <relationshipName>Campaign_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>