LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaign Requests</relationshipLabel>
    <relationshipName>Campaign_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>