LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Client_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Name__c</fullName>
    <formula>Client_Contact__r.FirstName  + &apos; &apos; +  Client_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Contact Name</label>
    <type>Text</type>
</CustomField>