LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Client Location</label>
    <type>Address</type>
</CustomField>