LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Campaign Requests</relationshipLabel>
    <relationshipName>Campaign_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>