LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Enquiry_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Amount__c</fullName>
    <formula>Enquiry__r.Approved_Enquiry_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiry Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>