LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Enquiry_Description__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Description__c</fullName>
    <label>Enquiry Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>