LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Enquiry_Stage__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Stage__c</fullName>
    <label>Enquiry Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal / External Discussions</fullName>
            </value>
            <value>
                <fullName>Identify/Create Enquiry</fullName>
            </value>
            <value>
                <fullName>Determine Problem &amp; Impact</fullName>
            </value>
            <value>
                <fullName>Validate Benefits &amp; Value</fullName>
            </value>
            <value>
                <fullName>Confirm Value With Client</fullName>
            </value>
            <value>
                <fullName>Negotiation &amp; Mutual Plan</fullName>
            </value>
            <value>
                <fullName>Nurture &amp; Finalizing Closure</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>