LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/EnquiryURL__c.field-meta.xml
<CustomField>
    <fullName>EnquiryURL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_340,FIND(&quot;/services&quot;, $Api.Partner_Server_URL_340))&amp; Enquiry__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EnquiryURL</label>
    <type>Text</type>
</CustomField>