LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <formula>Enquiry__r.Expertise_TXT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expertise</label>
    <type>Text</type>
</CustomField>