LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Parent_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign__c</fullName>
    <formula>Campaign__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign</label>
    <type>Text</type>
</CustomField>