LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Proposal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Sent__c</fullName>
    <label>Proposal Sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>