LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/SME__c.field-meta.xml
<CustomField>
    <fullName>SME__c</fullName>
    <formula>Enquiry__r.SME_Competency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SME</label>
    <type>Text</type>
</CustomField>