LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/SMEG__c.field-meta.xml
<CustomField>
    <fullName>SMEG__c</fullName>
    <description>Reporting purpose</description>
    <formula>Enquiry__r.SMEG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMEG</label>
    <type>Text</type>
</CustomField>