LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Solution_to_Market__c.field-meta.xml
<CustomField>
    <fullName>Solution_to_Market__c</fullName>
    <label>Solution to Market</label>
    <type>TextArea</type>
</CustomField>