LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SubSector</valueSetName>
    </valueSet>
</CustomField>