LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>