LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/fields/Type_of_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Campaign__c</fullName>
    <label>Type of Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social media</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
                <default>true</default>
                <label>Event</label>
            </value>
            <value>
                <fullName>Demo Signup / Trial</fullName>
            </value>
            <value>
                <fullName>Referral Program</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Thought Leadership</fullName>
            </value>
            <value>
                <fullName>Website Direct</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>