LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/validationRules/MarketingUserChangeField.validationRule-meta.xml
<ValidationRule>
    <fullName>MarketingUserChangeField</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
  OR
	(
	  ISCHANGED( Assets__c ),
	  ISCHANGED( Type_of_Campaign__c),
	  ISCHANGED(campaign_request_status__c)
	  
	),
	  $Profile.Name &lt;&gt; &quot;Markets Ecosystems&quot;,
	  $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the Campaign Request after it has been created.</errorMessage>
</ValidationRule>