LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>campaign_request_status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>