LinKreta_POC_Repository/force-app/main/default/objects/Campaign_Request__c/listViews/Marcom_Team_List_View.listView-meta.xml
<ListView>
    <fullName>Marcom_Team_List_View</fullName>
    <columns>NAME</columns>
    <columns>Pick_Record__c</columns>
    <columns>Enquiry__c</columns>
    <columns>Enquiry_Stage__c</columns>
    <columns>Assigned_to_Marcom_Team_Member__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Marcom Team List View</label>
    <sharedTo>
        <group>Marcom_Team</group>
    </sharedTo>
</ListView>